# ducknews_lake

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  init_ducklake.sql  pyproject.toml
ducknews_lake/: bronze_pipeline.py  dlt_pipeline.py  main.py  raw_pipeline.py
pipelines/: config.yaml
